@@ -34,6 +34,11 @@
 
 #define AUTHORS proper_name ("Jim Meyering")
 
+static struct option const long_options[] =
+{
+  {NULL, 0, NULL, 0}
+};
+
 /* Exit statuses.  */
 enum
   {
@@ -101,7 +106,7 @@ main (int argc, char **argv)
 
   parse_long_options (argc, argv, PROGRAM_NAME, PACKAGE_NAME, Version,
                       usage, AUTHORS, (char const *) NULL);
-  if (getopt_long (argc, argv, "+", NULL, NULL) != -1)
+  if (getopt_long (argc, argv, "+", long_options, NULL) != -1)
     usage (exit_internal_failure);
 
   if (argc <= optind)
