@@ -35,6 +35,11 @@
   proper_name ("Jim Meyering"), \
   proper_name ("Paul Eggert")
 
+static struct option const long_options[] =
+{
+  {NULL, 0, NULL, 0}
+};
+
 void
 usage (int status)
 {
@@ -111,7 +116,7 @@ main (int argc, char **argv)
 
   parse_long_options (argc, argv, PROGRAM_NAME, PACKAGE_NAME, Version,
                       usage, AUTHORS, (char const *) NULL);
-  if (getopt_long (argc, argv, "", NULL, NULL) != -1)
+  if (getopt_long (argc, argv, "", long_options, NULL) != -1)
     usage (EXIT_FAILURE);
 
   if (argc == 1)
