@@ -40,6 +40,11 @@
 
 #define AUTHORS proper_name ("Mark Kettenis")
 
+static struct option const long_options[] =
+{
+  {NULL, 0, NULL, 0}
+};
+
 /* Token delimiters when reading from a file.  */
 #define DELIM " \t\n"
 
@@ -553,7 +558,7 @@ main (int argc, char **argv)
 
   parse_long_options (argc, argv, PROGRAM_NAME, PACKAGE, Version,
                       usage, AUTHORS, (char const *) NULL);
-  if (getopt_long (argc, argv, "", NULL, NULL) != -1)
+  if (getopt_long (argc, argv, "", long_options, NULL) != -1)
     usage (EXIT_FAILURE);
 
   if (1 < argc - optind)
